--- a/src/client/app/pages/Home.css
+++ b/src/client/app/pages/Home.css
@@ -23,6 +23,38 @@
   color: #61dafb;
 }
 
+/* Splits the screen in half */
+.split {
+  height: 92vh;
+  width: 50%;
+  overflow: auto;
+}
+
+/* Left Side */
+.left {
+  background-color: yellow;
+  float: left;
+  width: 50%;
+}
+
+/* Right Side */
+.right {
+  float: right;
+  width: 50%;
+}
+
+/* Top of Right Side */
+.top {
+  height: 46vh;
+  background: blue;
+}
+
+/* bottom of Right Side */
+.bottom {
+  height: 46vh;
+  background: red;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
