--- a/src/client/app/pages/Home.css
+++ b/src/client/app/pages/Home.css
@@ -25,10 +25,31 @@
 .top {
   height: 46vh;
   background: blue;
+  background-image: url("../Images/Programming_Background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: palegoldenrod;
 }
 
 /* bottom of Right Side */
 .bottom {
   height: 46vh;
   background: red;
+}
+
+
+.centre {
+  text-align: center;
+  text-shadow:4px 4px 8px blue;
+  margin-left: 20%;
+  margin-right: 20%;
+  margin-top: 15%;
+  background-color: black;
+}
+
+/* style for image */
+#img {
+  margin-top: 2vh;
+  height: 40vh;
+  width: 30vw;
 }
