More work on webpage

--- a/Backup/12-2-2020 Backup/client/app/pages/Main.css
+++ b/Backup/12-2-2020 Backup/client/app/pages/Main.css
@@ -10,11 +10,11 @@
 
 #nav li{
     float: left;
-    padding: 2% 8% 2% 8%;
 }
 
 #nav li a {
     display: block;
+    padding: 3vh 21vh;
     text-decoration: none;
     font-weight: bold;
     color: white;
