--- a/Backup/12-2-2020 Backup/client/app/pages/About.scss
+++ b/Backup/12-2-2020 Backup/client/app/pages/About.scss
@@ -11,26 +11,30 @@ html {
     width: 1px;
 }
   
-.aboutMe-Box-Centre {
+.aboutMe {
+  display: flex;
+  height: 100vh;
+  width: 100%;
   position: relative;
-  left:25%;
 }
 
-.aboutMe-Box {
+.centre-alignment-about {
   position: absolute;
   background: linear-gradient(to bottom, #ba8b02, #181818);
-  width: 60%;
-  height: 60%;
-  top: 25%;
-  left: 20%;
+  width: 50%;
+  height: 50%;
+  top: 35%;
+  left: 25%;
+  margin-left: -80px;
+  margin-top: -25px;
   border: 2px solid #ffffff;
 }
 
-.aboutMe-Box-Title-Text {
-  font-size: calc(18px + (45 - 18) * ((100vw - 300px) / (1600 - 300)));
+.text-about {
+  position: relative;
+  margin-top: 7%;
+  margin-left: -21%;
 }
-
-
 
 /*
 * Falling Particle Animation 
