--- a/src/client/app/pages/About.scss
+++ b/src/client/app/pages/About.scss
@@ -13,7 +13,10 @@ html {
   
 .aboutMe-Box-Centre {
   position: relative;
-  left:25%;
+  text-align: center;
+  text-decoration-line: underline;
+  font-family: "Times New Roman", Times, serif;
+ // left:25%;
 }
 
 .aboutMe-Box {
@@ -23,7 +26,7 @@ html {
   height: 60%;
   top: 25%;
   left: 20%;
-  border: 2px solid #ffffff;
+  //border: 2px solid #ffffff;
 }
 
 .aboutMe-Box-Title-Text {
